--- a/search box for geojson polygon features with popup and style using leaflet search control.html
+++ b/search box for geojson polygon features with popup and style using leaflet search control.html
@@ -4,33 +4,33 @@
 <meta charset="utf-8" />
 <title>search box for geojson polygon features with popup and style using leaflet search control</title>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-<link rel="stylesheet" href='file:///C:/Users/user/Desktop/New folder (3)/leaflet-search-master/src/leaflet-search.css' />
+<link rel="stylesheet" href='https://cdn.rawgit.com/mayotunde/search/gh-pages/src/leaflet-search.css' />
+
+<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+<script src='https://cdn.rawgit.com/mayotunde/search/gh-pages/src/leaflet-search.js'></script>
+<script src='http://code.jquery.com/jquery-2.1.0.min.js'></script>
 
 </head>
 <body>
 <div id="map" style="width: 600px;height: 400px"></div>
-<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<script src='file:///C:/Users/user/Desktop/New folder (3)/leaflet-search-master/src/leaflet-search.js'></script>
-<script src='http://code.jquery.com/jquery-2.1.0.min.js'></script>
+
 <script>
-var map = L.map('map').setView([6.6, 5.9], 7);
+var map = L.map('map').setView([4.6, 2.9], 5);
 mapLink = 
-'<a href="http://stamen.com">stamenmaps</a>,'+'<a href="http://mapsnigeriainitiative.wordpress.com">mapsNI</a>';
+'<a href="http://mapbox.com">Mapbox</a>,'+'<a href="http://mapsnigeriainitiative.wordpress.com">mapsNI</a>';
 L.tileLayer(
-'http://tile.stamen.com/toner/{z}/{x}/{y}.png', {
-attribution: ' &copy; ' + mapLink,
-maxZoom: 18,
-}).addTo(map);
+'https://api.tiles.mapbox.com/v4/mapbox.light/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6IjZjNmRjNzk3ZmE2MTcwOTEwMGY0MzU3YjUzOWFmNWZhIn0.Y8bhBaUMqFiPrDRW9hieoQ',
+{ attribution:' Map data &copy;' + mapLink, maxZoom: 18, }).addTo(map);
 
 var style = {fillColor: 'green'};
 
-$.getJSON("states.geojson", function(data){
+$.getJSON("https://cdn.rawgit.com/mayotunde/search/gh-pages/lowestgdp.geojson", function(data){
 var region = new L.geoJson(data, {style,
 			onEachFeature: function(feature, layer) {
-			layer.bindPopup(feature.properties.NAME_1);
+			layer.bindPopup(feature.properties.Name);
 			}}).addTo(map);
 
-	var searchbox = new L.Control.Search({layer: region, propertyName: 'NAME_1', circleLocation: false, autocollapse: true});
+	var searchbox = new L.Control.Search({layer: region, propertyName: 'Name', circleLocation: false, autocollapse: true});
 	searchbox.on('search_locationfound', function(e) {
 		
 		e.layer.setStyle({fillColor: '#3f0', color: '#0f0'});
