--- a/search box for geojson polygon features with popup and style using leaflet search control.html
+++ b/search box for geojson polygon features with popup and style using leaflet search control.html
@@ -22,7 +22,7 @@ L.tileLayer(
 'https://api.tiles.mapbox.com/v4/mapbox.light/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6IjZjNmRjNzk3ZmE2MTcwOTEwMGY0MzU3YjUzOWFmNWZhIn0.Y8bhBaUMqFiPrDRW9hieoQ',
 { attribution:' Map data &copy;' + mapLink, maxZoom: 18, }).addTo(map);
 
-var style = {fillColor: 'green'};
+var style = {color: 'blue'};
 
 $.getJSON("https://cdn.rawgit.com/mayotunde/search/gh-pages/lowestgdp.geojson", function(data){
 var region = new L.geoJson(data, {style,
