--- a/search control with popup and style for geojson point features.html
+++ b/search control with popup and style for geojson point features.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>cities</title>
+<title>leaflet search plugin with popup and style</title>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 <link rel="stylesheet" href='file:///C:/Users/user/Desktop/New folder (3)/leaflet-search-master/src/leaflet-search.css' />
 <script src='http://code.jquery.com/jquery-2.1.0.min.js'></script>
 </head>
 <body>
-<div id="map" style="width: 600px;height: 400px"></div>
+<div id="map" style="width: 700px;height: 500px"></div>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 <script src='file:///C:/Users/user/Desktop/New folder (3)/leaflet-search-master/src/leaflet-search.js'></script>
 <script>
