--- a/search control with popup and style for geojson point features.html
+++ b/search control with popup and style for geojson point features.html
@@ -34,6 +34,11 @@ var cities = new L.GeoJSON(data, {
 			if(e.layer._popup)
 			e.layer.openPopup();
 
+	}).on('search_collapsed', function(e) {
+			cities.eachLayer(function(layer) {	
+			cities.resetStyle(layer);
+
+		});	
 	});
 	
 map.addControl( searchbox );  
